hphp/hack/test/typecheck/expression_trees/nesting/vars/simple_error.php.constraint_method_call.exp
ERROR: File "simple_error.php", line 6, characters 31-51:
Typing error (Typing[4110])
  File "expr_tree.php", line 493, characters 27-36:
  Expected `int`
  File "expr_tree.php", line 147, characters 40-45:
  But got `string`
